// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HIV TestResultDetailsModal matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="display-flex flex-justify flex-align-center"
      >
        <h1
          class="font-heading-lg margin-0"
          id="result-detail-title"
        >
          Result details
        </h1>
        <button
          class="modal__close-button margin-top-0"
          style="cursor: pointer;"
        >
          <img
            alt="Close"
            class="modal__close-img"
            src="close.svg"
          />
        </button>
      </div>
      <div
        class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
      />
      <h2
        class="font-sans-md margin-top-3"
      >
        Patient
      </h2>
      <div
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
      >
        <div
          class="grid-col padding-2 border-right-1px border-base-lighter"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Name
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            First Middle Last
          </span>
        </div>
        <div
          class="grid-col padding-2"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Date of birth
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            08/07/1990
          </span>
        </div>
      </div>
      <h2
        class="font-sans-md margin-top-3"
      >
        Test information
      </h2>
      <table
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
      >
        <tbody>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              HIV result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              POSITIVE
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Test date
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              01/28/2022 5:56pm
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Device
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Fake device
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Pregnant?
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Yes
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Gender of sexual partners
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Female, Male, Other
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
            >
              Submitted by
            </th>
            <td
              class="padding-y-3"
            >
              firstName middle last
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <div
      class="display-flex flex-justify flex-align-center"
    >
      <h1
        class="font-heading-lg margin-0"
        id="result-detail-title"
      >
        Result details
      </h1>
      <button
        class="modal__close-button margin-top-0"
        style="cursor: pointer;"
      >
        <img
          alt="Close"
          class="modal__close-img"
          src="close.svg"
        />
      </button>
    </div>
    <div
      class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
    />
    <h2
      class="font-sans-md margin-top-3"
    >
      Patient
    </h2>
    <div
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
    >
      <div
        class="grid-col padding-2 border-right-1px border-base-lighter"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Name
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          First Middle Last
        </span>
      </div>
      <div
        class="grid-col padding-2"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Date of birth
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          08/07/1990
        </span>
      </div>
    </div>
    <h2
      class="font-sans-md margin-top-3"
    >
      Test information
    </h2>
    <table
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
    >
      <tbody>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            HIV result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            POSITIVE
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Test date
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            01/28/2022 5:56pm
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Device
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Fake device
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Pregnant?
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Yes
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Gender of sexual partners
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Female, Male, Other
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
          >
            Submitted by
          </th>
          <td
            class="padding-y-3"
          >
            firstName middle last
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Syphilis TestResultDetailsModal matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="display-flex flex-justify flex-align-center"
      >
        <h1
          class="font-heading-lg margin-0"
          id="result-detail-title"
        >
          Result details
        </h1>
        <button
          class="modal__close-button margin-top-0"
          style="cursor: pointer;"
        >
          <img
            alt="Close"
            class="modal__close-img"
            src="close.svg"
          />
        </button>
      </div>
      <div
        class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
      />
      <h2
        class="font-sans-md margin-top-3"
      >
        Patient
      </h2>
      <div
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
      >
        <div
          class="grid-col padding-2 border-right-1px border-base-lighter"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Name
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            First Middle Last
          </span>
        </div>
        <div
          class="grid-col padding-2"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Date of birth
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            08/07/1990
          </span>
        </div>
      </div>
      <h2
        class="font-sans-md margin-top-3"
      >
        Test information
      </h2>
      <table
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
      >
        <tbody>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Syphilis result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              POSITIVE
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Test date
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              01/28/2022 5:56pm
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Device
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Fake device
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Symptoms
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Palmar (hand)/plantar (foot) rash, Blurred vision, Body Rash
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Symptom onset
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              09/24/2024
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Pregnant?
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Yes
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Gender of sexual partners
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Female, Male, Other
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Previously told they have syphilis?
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Yes
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
            >
              Submitted by
            </th>
            <td
              class="padding-y-3"
            >
              firstName middle last
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <div
      class="display-flex flex-justify flex-align-center"
    >
      <h1
        class="font-heading-lg margin-0"
        id="result-detail-title"
      >
        Result details
      </h1>
      <button
        class="modal__close-button margin-top-0"
        style="cursor: pointer;"
      >
        <img
          alt="Close"
          class="modal__close-img"
          src="close.svg"
        />
      </button>
    </div>
    <div
      class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
    />
    <h2
      class="font-sans-md margin-top-3"
    >
      Patient
    </h2>
    <div
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
    >
      <div
        class="grid-col padding-2 border-right-1px border-base-lighter"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Name
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          First Middle Last
        </span>
      </div>
      <div
        class="grid-col padding-2"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Date of birth
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          08/07/1990
        </span>
      </div>
    </div>
    <h2
      class="font-sans-md margin-top-3"
    >
      Test information
    </h2>
    <table
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
    >
      <tbody>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Syphilis result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            POSITIVE
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Test date
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            01/28/2022 5:56pm
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Device
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Fake device
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Symptoms
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Palmar (hand)/plantar (foot) rash, Blurred vision, Body Rash
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Symptom onset
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            09/24/2024
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Pregnant?
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Yes
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Gender of sexual partners
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Female, Male, Other
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Previously told they have syphilis?
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Yes
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
          >
            Submitted by
          </th>
          <td
            class="padding-y-3"
          >
            firstName middle last
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`multiple diseases TestResultDetailsModal matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="display-flex flex-justify flex-align-center"
      >
        <h1
          class="font-heading-lg margin-0"
          id="result-detail-title"
        >
          Result details
        </h1>
        <button
          class="modal__close-button margin-top-0"
          style="cursor: pointer;"
        >
          <img
            alt="Close"
            class="modal__close-img"
            src="close.svg"
          />
        </button>
      </div>
      <div
        class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
      />
      <h2
        class="font-sans-md margin-top-3"
      >
        Patient
      </h2>
      <div
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
      >
        <div
          class="grid-col padding-2 border-right-1px border-base-lighter"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Name
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            First Middle Last
          </span>
        </div>
        <div
          class="grid-col padding-2"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Date of birth
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            08/07/1990
          </span>
        </div>
      </div>
      <h2
        class="font-sans-md margin-top-3"
      >
        Test information
      </h2>
      <table
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
      >
        <tbody>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              COVID-19 result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              POSITIVE
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Flu A result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              NEGATIVE
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Flu B result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              POSITIVE
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              RSV result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              UNDETERMINED
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Test date
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              01/28/2022 5:56pm
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Device
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Fake device
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Symptoms
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              No symptoms
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Symptom onset
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Invalid date
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Pregnant?
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              --
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
            >
              Submitted by
            </th>
            <td
              class="padding-y-3"
            >
              firstName middle last
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <div
      class="display-flex flex-justify flex-align-center"
    >
      <h1
        class="font-heading-lg margin-0"
        id="result-detail-title"
      >
        Result details
      </h1>
      <button
        class="modal__close-button margin-top-0"
        style="cursor: pointer;"
      >
        <img
          alt="Close"
          class="modal__close-img"
          src="close.svg"
        />
      </button>
    </div>
    <div
      class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
    />
    <h2
      class="font-sans-md margin-top-3"
    >
      Patient
    </h2>
    <div
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
    >
      <div
        class="grid-col padding-2 border-right-1px border-base-lighter"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Name
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          First Middle Last
        </span>
      </div>
      <div
        class="grid-col padding-2"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Date of birth
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          08/07/1990
        </span>
      </div>
    </div>
    <h2
      class="font-sans-md margin-top-3"
    >
      Test information
    </h2>
    <table
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
    >
      <tbody>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            COVID-19 result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            POSITIVE
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Flu A result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            NEGATIVE
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Flu B result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            POSITIVE
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            RSV result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            UNDETERMINED
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Test date
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            01/28/2022 5:56pm
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Device
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Fake device
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Symptoms
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            No symptoms
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Symptom onset
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Invalid date
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Pregnant?
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            --
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
          >
            Submitted by
          </th>
          <td
            class="padding-y-3"
          >
            firstName middle last
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`single disease TestResultDetailsModal matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="display-flex flex-justify flex-align-center"
      >
        <h1
          class="font-heading-lg margin-0"
          id="result-detail-title"
        >
          Result details
        </h1>
        <button
          class="modal__close-button margin-top-0"
          style="cursor: pointer;"
        >
          <img
            alt="Close"
            class="modal__close-img"
            src="close.svg"
          />
        </button>
      </div>
      <div
        class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
      />
      <h2
        class="font-sans-md margin-top-3"
      >
        Patient
      </h2>
      <div
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
      >
        <div
          class="grid-col padding-2 border-right-1px border-base-lighter"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Name
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            First Middle Last
          </span>
        </div>
        <div
          class="grid-col padding-2"
        >
          <span
            class="text-bold text-no-strike text-ink display-block margin-bottom-1"
          >
            Date of birth
          </span>
          <span
            aria-describedby="result-detail-title"
            class="font-sans-lg"
          >
            08/07/1990
          </span>
        </div>
      </div>
      <h2
        class="font-sans-md margin-top-3"
      >
        Test information
      </h2>
      <table
        class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
      >
        <tbody>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              COVID-19 result
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              NEGATIVE
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Test date
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              01/28/2022 5:56pm
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Device
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Fake device
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Symptoms
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              No symptoms
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Symptom onset
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              Invalid date
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
            >
              Pregnant?
            </th>
            <td
              class="padding-y-3 border-bottom-1px border-base-lighter"
            >
              --
            </td>
          </tr>
          <tr>
            <th
              class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
            >
              Submitted by
            </th>
            <td
              class="padding-y-3"
            >
              firstName middle last
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <div
      class="display-flex flex-justify flex-align-center"
    >
      <h1
        class="font-heading-lg margin-0"
        id="result-detail-title"
      >
        Result details
      </h1>
      <button
        class="modal__close-button margin-top-0"
        style="cursor: pointer;"
      >
        <img
          alt="Close"
          class="modal__close-img"
          src="close.svg"
        />
      </button>
    </div>
    <div
      class="border-top border-base-lighter margin-x-neg-205 margin-top-1"
    />
    <h2
      class="font-sans-md margin-top-3"
    >
      Patient
    </h2>
    <div
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1 grid-row flex-row padding-0"
    >
      <div
        class="grid-col padding-2 border-right-1px border-base-lighter"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Name
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          First Middle Last
        </span>
      </div>
      <div
        class="grid-col padding-2"
      >
        <span
          class="text-bold text-no-strike text-ink display-block margin-bottom-1"
        >
          Date of birth
        </span>
        <span
          aria-describedby="result-detail-title"
          class="font-sans-lg"
        >
          08/07/1990
        </span>
      </div>
    </div>
    <h2
      class="font-sans-md margin-top-3"
    >
      Test information
    </h2>
    <table
      class="width-full font-sans-md add-list-reset border-base-lighter border-2px radius-md padding-x-2 padding-y-1"
    >
      <tbody>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            COVID-19 result
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            NEGATIVE
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Test date
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            01/28/2022 5:56pm
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Device
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Fake device
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Symptoms
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            No symptoms
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Symptom onset
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            Invalid date
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 border-bottom-1px border-base-lighter width-card-lg text-left"
          >
            Pregnant?
          </th>
          <td
            class="padding-y-3 border-bottom-1px border-base-lighter"
          >
            --
          </td>
        </tr>
        <tr>
          <th
            class="text-bold text-no-strike text-ink padding-y-3 width-card-lg text-left"
          >
            Submitted by
          </th>
          <td
            class="padding-y-3"
          >
            firstName middle last
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
